# copier-python-wxpython

./: .gitignore  .pre-commit-config.yaml  README.md  copier.yml  pyproject.toml
.github/workflows/: test.yml
copier/: jinja_extensions.py  settings.yml
copier/questions/: features.yml  project.yml  python.yml
template/: .gitignore  .gitignore.jinja  .pre-commit-config.yaml  Makefile  Makefile.jinja  build.cmd.jinja  pyproject.toml.jinja  tox.ini  {% if with_cli and with_pyinstaller %}{{ project_name }}-cli.spec{% endif %}.jinja  {% if with_cython %}setup.py{% endif %}.jinja  {% if with_pyinstaller %}{{ project_name }}.spec{% endif %}.jinja  {% if with_tox %}tox.ini{% endif %}.jinja  {{project_name}}.fbp.jinja
template/.github/workflows/: test.yml  test.yml.jinja
template/src/{{project_package}}/: __about__.py.jinja  __gui__.py.jinja  __init__.py.jinja  __main__.py  __main__.py.jinja  app.py.jinja  config.py.jinja  resources.py  state.py  state.py.jinja  {% if with_cli %}__cli__.py{% endif %}.jinja
template/src/{{project_package}}/frames/: main_frame.py.jinja
template/src/{{project_package}}/gui/: app.py
template/src/{{project_package}}/gui/forms/: __init__.py  main_form.py
template/src/{{project_package}}/gui/res/: images.py
template/src/{{project_package}}/windows/: main_frame.py.jinja
template/tests/: conftest.py.jinja  {% if with_cli %}test_cli.py{% endif %}.jinja
tests/: test_template.py
